@@ -13,7 +13,7 @@
   <div class="comment_body">
     <p class="post_meta"> 
       <i class="greytext icon-user"></i><span class="smallfont greytext">  by <?php print $author; ?></span> &nbsp; &nbsp;
-      <i class="greytext icon-calendar"></i> <span class="smallfont greytext"><?php print format_date($node->created, 'custom', 'M d, Y'); ?> </span> &nbsp; &nbsp;
+      <i class="greytext icon-calendar"></i> <span class="smallfont greytext"><?php print format_date($comment->created, 'custom', 'M d, Y'); ?> </span> &nbsp; &nbsp;
       <i class="greytext icon-info-sign"></i> <?php print $permalink; ?>
     </p>
     <?php if ($new): ?>
